--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Edit meta tags for SEO -->
-    <title>DeveloperFolio | Developer Portfolio Template</title>
-    <meta name="title" content="DeveloperFolio | Developer Portfolio Template">
-    <meta name="description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer">
+    <title>Liant Portfolio</title>
+    <meta name="title" content="Liant Portfolio">
+    <meta name="description" content="Showcase of Liant portfolio">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://developerfolio.js.org/">
-    <meta property="og:title" content="DeveloperFolio | Developer Portfolio Template">
-    <meta property="og:description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer">
+    <meta property="og:url" content="https://brilliantfikri.com/">
+    <meta property="og:title" content="Liant Portfolio">
+    <meta property="og:description" content="Showcase of Liant portfolio">
     <!-- Link to a hosted image -->
     <!-- <meta property="og:image" content=""> -->
     
